# talk-tag

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  security.yml
docs/: api.md  cli.md  governance.md  index.md  input-output.md  installation.md  runtime.md  troubleshooting.md
examples/: colab_quickstart.ipynb  sample.cha
src/talk_tag/: __init__.py  __main__.py  api.py  cli.py  config.py  doctor.py  inference.py  json_utils.py  models.py  pipeline.py  progress.py  reporting.py  runtime.py
src/talk_tag/annotator/: __init__.py  confidence.py  parser.py  prompt.py  renderer.py
src/talk_tag/formats/: cha.py  common.py  csv.py  json.py  jsonl.py  txt.py  xlsx.py
src/talk_tag/model/: __init__.py  chat_tokens.json  deployment_loader.py  hf.py  transformers_engine.py
tests/: conftest.py  test_cli_commands.py  test_deployment_loader.py  test_doctor.py  test_inference_api.py  test_model_resolution.py  test_pipeline.py  test_runtime.py
