[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talk-tag"
version = "0.1.0"
description = "GPU-only transcript annotator for speaker-scoped CHAT corpus correction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface_hub>=0.29.3",
    "openpyxl>=3.1.5",
    "orjson>=3.10.15",
    "pandas>=2.2.3",
    "torch>=2.7.0",
    "transformers>=4.52.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.5"]

[project.scripts]
"talk-tag" = "talk_tag.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"talk_tag.model" = ["chat_tokens.json"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
