[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talk-tag"
version = "0.2.0"
description = "Transcript annotator for speaker-scoped CHAT corpus correction"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["chat", "transcript", "annotation", "linguistics", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "huggingface_hub>=0.29.3",
    "openpyxl>=3.1.5",
    "orjson>=3.10.15",
    "pandas>=2.2.3",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
runtime = [
    "numpy>=2.0.0",
    "peft>=0.12.0",
    "torch>=2.7.0",
    "transformers>=4.52.0",
]
dev = ["pytest>=8.3.5"]

[project.scripts]
"talk-tag" = "talk_tag.cli:app"

[project.urls]
Homepage = "https://github.com/OliverHennhoefer/talk-tag"
Repository = "https://github.com/OliverHennhoefer/talk-tag"
Issues = "https://github.com/OliverHennhoefer/talk-tag/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"talk_tag.model" = ["chat_tokens.json"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]
norecursedirs = [
    ".git",
    ".venv",
    ".pytest_cache",
    ".pytest_tmp*",
    ".pytest_basetemp*",
    ".talk-tag-cache",
    ".test_workspace",
    "build",
    "dist",
    "pytest-temp-root",
    "pytest-cache-files-*",
]
