[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talk-tag"
version = "0.4.0"
description = "LLM-powered TalkBank CHAT annotator for speaker-targeted morphosyntactic transcript correction"
readme = "README.md"
authors = [
    { name = "Oliver Hennhöfer" },
    { name = "Shamira Venturini" },
]
maintainers = [
    { name = "Oliver Hennhöfer" },
    { name = "Shamira Venturini" },
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["chat", "transcript", "annotation", "linguistics", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "huggingface_hub>=0.29.3",
    "openpyxl>=3.1.5",
    "orjson>=3.10.15",
    "pandas>=2.2.3",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
runtime = [
    "numpy>=2.0.0",
    "peft>=0.12.0",
    "torch>=2.7.0",
    "transformers>=4.52.0",
]
dev = ["pytest>=8.3.5"]
docs = [
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.30.0",
]
qa = [
    "mypy>=1.15.0",
    "ruff>=0.11.0",
    "twine>=6.1.0",
]

[project.scripts]
"talk-tag" = "talk_tag.cli:app"

[project.urls]
Homepage = "https://github.com/OliverHennhoefer/talk-tag"
Repository = "https://github.com/OliverHennhoefer/talk-tag"
Issues = "https://github.com/OliverHennhoefer/talk-tag/issues"
Documentation = "https://oliverhennhoefer.github.io/talk-tag/"
Changelog = "https://github.com/OliverHennhoefer/talk-tag/blob/main/CHANGELOG.md"
Security = "https://github.com/OliverHennhoefer/talk-tag/security/policy"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"talk_tag.model" = ["chat_tokens.json"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q -p no:cacheprovider"
testpaths = ["tests"]
norecursedirs = [
    ".git",
    ".venv",
    ".pytest_cache",
    ".pytest_tmp*",
    ".pytest_basetemp*",
    ".talk-tag-cache",
    ".test_workspace",
    "build",
    "dist",
    "pytest-temp-root",
    "pytest-cache-files-*",
]

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]

[tool.mypy]
python_version = "3.10"
files = ["src/talk_tag"]
ignore_missing_imports = true
warn_unused_configs = true
check_untyped_defs = true
